modificaciones producto y cargando

--- a/src/app/modules/colaboradores/colaboradores.component.html
+++ b/src/app/modules/colaboradores/colaboradores.component.html
@@ -1,75 +1,84 @@
-<div style="margin-top: 60px;">
-<div class="container mt-4">
-  <h2 class="mb-3">LISTA DE COLABORADORES</h2>
-  <div style="text-align: right; margin-bottom: 50px;">
-    <button mat-raised-button (click)="OpenAgregar()" style="background-color: #fd9727; font-size: 16px;"><mat-icon>add</mat-icon>AGREGAR COLABORADOR</button>  <!--routerLink="../alta-colaborador"-->
-    </div>
-
-  <div class="mb-3">
-      <mat-form-field class="example-full-width">
-          <mat-label>Nombre de colaborador</mat-label>
-          <span matPrefix class="icon_search"><mat-icon>search</mat-icon></span>
-          <input matInput placeholder="Nombre colaborador" #txtSearch (keyup)="onSearchPokemon($event)">
-        </mat-form-field>
+<div class="custom-spinner-container" *ngIf="isLoading">
+  <div class="custom-spinner">
+      <div class="spinner-circle"></div>
+      <div class="spinner-text">Cargando...</div>
   </div>
-  <div class="row">
-    <div  class="table-container">
-      <table mat-table [dataSource]="dataSource" >
-        <ng-container matColumnDef="nombre">
-          <th mat-header-cell *matHeaderCellDef> Nombre </th>
-          <td mat-cell *matCellDef="let empleados"> {{ empleados.nombreCompleto }}  </td>
-        </ng-container>
-      
-         <ng-container matColumnDef="turno">
-          <th mat-header-cell *matHeaderCellDef> Turno </th>
-          <td mat-cell *matCellDef="let empleados"> {{ empleados.id_empleado }} </td>
-        </ng-container> 
-      
-        <ng-container matColumnDef="email">
-          <th mat-header-cell *matHeaderCellDef> Email </th>
-          <td mat-cell *matCellDef="let empleados"> {{ empleados.correoEmpleado }} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="telefono">
-          <th mat-header-cell *matHeaderCellDef> Telefono </th>
-          <td mat-cell *matCellDef="let empleados"> {{ empleados.telefono }} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="activar">
-          <th mat-header-cell style="margin: 0;" *matHeaderCellDef>Estatus</th>
-          <td mat-cell *matCellDef="let item; let i = index">
-              <div class="toggle-container">
-                  <!-- Usar item.idBodega en lugar de empleados.id_empleado -->
-                  <input type="checkbox" id="toggle{{item.id_empleado}}{{i}}" class="toggle-checkbox" [checked]="item.estatus == 1" (change)="onToggle($event, item.id_empleado, item.correoEmpleado)">
-                  <label for="toggle{{item.id_empleado}}{{i}}" class="toggle-label"></label>
-              </div>
-          </td>
-      </ng-container>
-      
-      
-        <ng-container matColumnDef="acciones">
-          <th mat-header-cell *matHeaderCellDef> Acciones </th>
-          <td mat-cell *matCellDef="let empleado">
-            <button mat-icon-button color="primary" (click)="OpenEditar(empleado)">
-              <mat-icon>edit</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-      
-        <tr mat-header-row *matHeaderRowDef="['nombre', 'email', 'telefono','activar', 'acciones']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['nombre', 'email', 'telefono', 'activar','acciones'];"></tr>
-      </table>
-      
-      </div>
-
-      <mat-paginator
-      [pageSizeOptions]="[5, 10, 15, 20]"
-      showFirstLastButtons
-    ></mat-paginator>
-
-  </div>
-</div> 
 </div>
+<div>
+  <div style="margin-top: 60px;">
+    <div class="container mt-4">
+      <h2 class="mb-3">LISTA DE COLABORADORES</h2>
+      <div style="text-align: right; margin-bottom: 50px;">
+        <button mat-raised-button (click)="OpenAgregar()" style="background-color: #fd9727; font-size: 16px;"><mat-icon>add</mat-icon>AGREGAR COLABORADOR</button>  <!--routerLink="../alta-colaborador"-->
+        </div>
+    
+      <div class="mb-3">
+          <mat-form-field class="example-full-width">
+              <mat-label>Nombre de colaborador</mat-label>
+              <span matPrefix class="icon_search"><mat-icon>search</mat-icon></span>
+              <input matInput placeholder="Nombre colaborador" #txtSearch (keyup)="onSearchPokemon($event)">
+            </mat-form-field>
+      </div>
+      <div class="row">
+        <div  class="table-container">
+          <table mat-table [dataSource]="dataSource" >
+            <ng-container matColumnDef="nombre">
+              <th mat-header-cell *matHeaderCellDef> Nombre </th>
+              <td mat-cell *matCellDef="let empleados"> {{ empleados.nombreCompleto }}  </td>
+            </ng-container>
+          
+             <ng-container matColumnDef="turno">
+              <th mat-header-cell *matHeaderCellDef> Turno </th>
+              <td mat-cell *matCellDef="let empleados"> {{ empleados.id_empleado }} </td>
+            </ng-container> 
+          
+            <ng-container matColumnDef="email">
+              <th mat-header-cell *matHeaderCellDef> Email </th>
+              <td mat-cell *matCellDef="let empleados"> {{ empleados.correoEmpleado }} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="telefono">
+              <th mat-header-cell *matHeaderCellDef> Telefono </th>
+              <td mat-cell *matCellDef="let empleados"> {{ empleados.telefono }} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="activar">
+              <th mat-header-cell style="margin: 0;" *matHeaderCellDef>Estatus</th>
+              <td mat-cell *matCellDef="let item; let i = index">
+                  <div class="toggle-container">
+                      <!-- Usar item.idBodega en lugar de empleados.id_empleado -->
+                      <input type="checkbox" id="toggle{{item.id_empleado}}{{i}}" class="toggle-checkbox" [checked]="item.estatus == 1" (change)="onToggle($event, item.id_empleado, item.correoEmpleado)">
+                      <label for="toggle{{item.id_empleado}}{{i}}" class="toggle-label"></label>
+                  </div>
+              </td>
+          </ng-container>
+          
+          
+            <ng-container matColumnDef="acciones">
+              <th mat-header-cell *matHeaderCellDef> Acciones </th>
+              <td mat-cell *matCellDef="let empleado">
+                <button mat-icon-button color="primary" (click)="OpenEditar(empleado)">
+                  <mat-icon>edit</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+          
+            <tr mat-header-row *matHeaderRowDef="['nombre', 'email', 'telefono','activar', 'acciones']"></tr>
+            <tr mat-row *matRowDef="let row; columns: ['nombre', 'email', 'telefono', 'activar','acciones'];"></tr>
+          </table>
+          
+          </div>
+    
+          <mat-paginator
+          [pageSizeOptions]="[5, 10, 15, 20]"
+          showFirstLastButtons
+        ></mat-paginator>
+    
+      </div>
+    </div> 
+  </div>
+</div>
+
 
 
 
