--- a/src/app/modules/entradas/entradas.component.css
+++ b/src/app/modules/entradas/entradas.component.css
@@ -117,3 +117,38 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
   }
+
+  /*CARGANDO*/
+.custom-spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+  
+  .custom-spinner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .spinner-circle {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 4px solid #fd9727;
+    border-top: 4px solid transparent;
+    animation: spin 1s linear infinite;
+  }
+  
+  .spinner-text {
+    margin-top: 10px;
+    font-weight: bold;
+    color: #000000; 
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
