--- a/src/app/modules/home/home.component.css
+++ b/src/app/modules/home/home.component.css
@@ -95,13 +95,11 @@
   
   }
   
-
   .sup-card {
     border: 1px solid #bbbcbd; 
     background-color: #FFFFFF; 
 
   }
-
 
  /* Estilos para la tabla */
 .mi-tabla {
@@ -131,4 +129,39 @@
   border: 1px solid #ccc;
   padding: 10px;
   margin-top: 10px;
+}
+
+
+/*CARGANDO*/
+.custom-spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.custom-spinner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.spinner-circle {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: 4px solid #fd9727;
+  border-top: 4px solid transparent;
+  animation: spin 1s linear infinite;
+}
+
+.spinner-text {
+  margin-top: 10px;
+  font-weight: bold;
+  color: #000000; 
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
