--- a/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.css
+++ b/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.css
@@ -88,10 +88,6 @@ table {
     grid-template-columns: 25% 10% 25% 10% 30%   
 }
 
-
-
-
-
 .estatus-activo {
   background-color: #00aa1c;
   color: white;
@@ -101,14 +97,46 @@ table {
   text-align: center; /* Centra el contenido horizontalmente */
 }
 
-
 .estatus-inactivo {
   background-color: #a30000;
   color: rgb(255, 255, 255);
   border-radius: 5px; /* Ajusta el radio según tus preferencias para hacerlo más o menos ovalado */
   padding: 3px; /* Añade un poco de espacio alrededor del contenido */
- 
   text-align: center; /* Centra el contenido horizontalmente */
+}
+
+/*CARGANDO*/
+.custom-spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.custom-spinner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.spinner-circle {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: 4px solid #fd9727;
+  border-top: 4px solid transparent;
+  animation: spin 1s linear infinite;
+}
+
+.spinner-text {
+  margin-top: 10px;
+  font-weight: bold;
+  color: #000000; 
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 
