--- a/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
+++ b/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
@@ -1,159 +1,116 @@
-<div style="margin-top: 60px;">
-  <div class="container mt-4">
-  <h2>LISTA DE CLIENTES Y PAGO DE MEMBRESÍA EN EFECTIVO</h2>
-    <!--<mat-tab-group>-->
-        <!-- APARTADO 1, LISTADO TOTAL DE CLIENTES CON UNA MEMBRESIA ACTIVA -->
-        <!--<mat-tab label="Clientes activos"> -->
-            <br>
-
-            <div class="grid-input-date" >
-              <div style="display: flex; justify-content: flex-end;">
-                  <mat-form-field appearance="outline">
-                      <mat-label>Fecha Inicio</mat-label>
-                      <input matInput [matDatepicker]="pickerInicio" (ngModelChange)="onFechaInicioChange($event)" [(ngModel)]="fechaInicio" readonly>  
-                      <mat-hint>MM/DD/YYYY</mat-hint>
-                      <mat-datepicker-toggle matIconSuffix [for]="pickerInicio"></mat-datepicker-toggle>
-                      <mat-datepicker #pickerInicio></mat-datepicker>
-                  </mat-form-field>
-              </div>
-      
-              <div></div>
-      
-              <div style="display: flex; justify-content: flex-start;">
-                  <mat-form-field appearance="outline">
-                      <mat-label>Fecha Fin</mat-label>
-                      <input matInput [matDatepicker]="pickerFin" (ngModelChange)="onFechaFinChange($event)" [(ngModel)]="fechaFin" readonly>
-                      <mat-hint>MM/DD/YYYY</mat-hint>
-                      <mat-datepicker-toggle matIconSuffix [for]="pickerFin"></mat-datepicker-toggle>
-                      <mat-datepicker #pickerFin></mat-datepicker>
-                  </mat-form-field>
-              </div>
-              
-              <div></div>
-              
-              <div style="display: flex; justify-content: flex-end;">
-      
-                <button class="mat-button" mat-button [matMenuTriggerFor]="menu">
-                  <mat-icon style="font-size: 22px;">download</mat-icon>
-                  Descargar Reporte
-                </button>
-                <mat-menu #menu="matMenu">
-                  <button mat-menu-item (click)="descargarExcel()">.xlsx <mat-icon>grid_on</mat-icon></button>
-                  <button mat-menu-item (click)="descargarPDF()">.pdf <mat-icon>picture_as_pdf</mat-icon></button>
-      
-                </mat-menu>
-      
-              </div>
-            </div>
-            <br>
-
-            <mat-form-field class="full-width">
-                <mat-label>Buscar</mat-label>
-                <input matInput (keyup)="applyFilterActivos($event)"placeholder="Buscar" #input/>
+<div class="custom-spinner-container" *ngIf="isLoading">
+  <div class="custom-spinner">
+      <div class="spinner-circle"></div>
+      <div class="spinner-text">Cargando...</div>
+  </div>
+</div>
+<div *ngIf="!isLoading">
+  <div style="margin-top: 60px;">
+    <div class="container mt-4">
+      <h2>LISTA DE CLIENTES Y PAGO DE MEMBRESÍA EN EFECTIVO</h2>
+      <br>
+      <div class="grid-input-date" >
+        <div style="display: flex; justify-content: flex-end;">
+            <mat-form-field appearance="outline">
+              <mat-label>Fecha Inicio</mat-label>
+              <input matInput [matDatepicker]="pickerInicio" (ngModelChange)="onFechaInicioChange($event)" [(ngModel)]="fechaInicio" readonly>  
+              <mat-hint>MM/DD/YYYY</mat-hint>
+              <mat-datepicker-toggle matIconSuffix [for]="pickerInicio"></mat-datepicker-toggle>
+              <mat-datepicker #pickerInicio></mat-datepicker>
             </mat-form-field>
-            <div  class="table-container">
-           
-              <table mat-table [dataSource]="dataSourceActivos" class="mat-elevation-z8">
-                <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumnsActivos">
-                  <th mat-header-cell *matHeaderCellDef >{{ column }}</th>
-                  <td mat-cell *matCellDef="let prod">
-                    <!--<ng-container *ngIf="column === 'ID'">
-                        {{ prod.ID }}
-                      </ng-container>-->
-                      <ng-container *ngIf="column === 'Nombre'">
-                        {{ prod.Nombre }}
-                      </ng-container>
-                     
-                      <ng-container *ngIf="column === 'Membresia'">
-                        {{ prod.Membresia }}
-                      </ng-container>
-                      <ng-container *ngIf="column === 'Precio'">
-                        {{ prod.Precio }}
-                      </ng-container>
-                      <ng-container *ngIf="column === 'Fecha Inicio'">
-                        {{ prod.Fecha_Inicio }}
-                      </ng-container>
-                      <ng-container *ngIf="column === 'Fecha Fin'">
-                        {{ prod.Fecha_Fin }}
-                      </ng-container>
-                      <!--<ng-container *ngIf="column === 'Membresia'">
-                        <ng-container *ngIf="prod.accion !== 'Online'">
-                          {{ prod.Membresia }}
-                        </ng-container>
-                        <ng-container *ngIf="prod.accion === 'Online'">
-                          &nbsp;
-                        </ng-container>
-                      </ng-container>
-                      <ng-container *ngIf="column === 'Precio'">
-                        <ng-container *ngIf="prod.accion !== 'Online'">
-                          {{ prod.Precio }}
-                        </ng-container>
-                        <ng-container *ngIf="prod.accion === 'Online'">
-                          &nbsp;
-                        </ng-container>
-                      </ng-container>
-                      <ng-container *ngIf="column === 'Fecha Inicio'">
-                        <ng-container *ngIf="prod.accion !== 'Online'">
-                          {{ prod.Fecha_Inicio }}
-                        </ng-container>
-                        <ng-container *ngIf="prod.accion === 'Online'">
-                          &nbsp;
-                        </ng-container>
-                      </ng-container>
-                      <ng-container *ngIf="column === 'Fecha Fin'">
-                        <ng-container *ngIf="prod.accion !== 'Online'">
-                          {{ prod.Fecha_Fin }}
-                        </ng-container>
-                        <ng-container *ngIf="prod.accion === 'Online'">
-                          &nbsp;
-                        </ng-container>
-                      </ng-container>-->
-                      <ng-container *ngIf="column === 'Estatus'">
-                        <div [ngClass]="{'estatus-activo': prod.Status_Num === '1', 'estatus-inactivo': prod.Status_Num !== '1'}">
-                          {{ prod.Status }}
-                        </div>
-                      </ng-container>
-
-                    
+        </div>      
+        <div></div>
+        <div style="display: flex; justify-content: flex-start;">
+          <mat-form-field appearance="outline">
+            <mat-label>Fecha Fin</mat-label>
+            <input matInput [matDatepicker]="pickerFin" (ngModelChange)="onFechaFinChange($event)" [(ngModel)]="fechaFin" readonly>
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="pickerFin"></mat-datepicker-toggle>
+            <mat-datepicker #pickerFin></mat-datepicker>
+          </mat-form-field>
+        </div>    
+        <div></div>          
+        <div style="display: flex; justify-content: flex-end;">
+          <button class="mat-button" mat-button [matMenuTriggerFor]="menu">
+          <mat-icon style="font-size: 22px;">download</mat-icon>
+          Descargar Reporte
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="descargarExcel()">.xlsx <mat-icon>grid_on</mat-icon></button>
+            <button mat-menu-item (click)="descargarPDF()">.pdf <mat-icon>picture_as_pdf</mat-icon></button>
+          </mat-menu>
+        </div>   
+      </div>
+      <mat-form-field class="full-width">
+        <mat-label>Buscar</mat-label>
+        <input matInput (keyup)="applyFilterActivos($event)"placeholder="Buscar" #input/>
+      </mat-form-field>
+      <div  class="table-container">
+        <table mat-table [dataSource]="dataSourceActivos" class="mat-elevation-z8">
+          <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumnsActivos">
+            <th mat-header-cell *matHeaderCellDef >{{ column }}</th>
+            <td mat-cell *matCellDef="let prod">
+  
+              <ng-container *ngIf="column === 'Nombre'">
+              {{ prod.Nombre }}
+              </ng-container>
                       
-                      <!--<ng-container *ngIf="column === 'Dinero Recibido'">
-                        <mat-form-field>
-                          <input matInput [(ngModel)]="prod.cash" [disabled]="prod.Status === 'Activo'" type="number" min="0" placeholder="0"/> ///[(ngModel)]="updMem.moneyRecibido"
-                        </mat-form-field>
-                      </ng-container>
-                      <ng-container *ngIf="column === 'Pagar'">
-                        <button mat-raised-button (click)="pagarMismaMembresia(prod)" [disabled]="prod.Status === 'Activo'" style="background-color: #F9A640; color: #000000;">Pagar<mat-icon>attach_money</mat-icon></button>  ///(click)="pagarMismaMembresia(prod)"
-                      </ng-container>--->
-                      <ng-container *ngIf="column === 'Reenovación'">
-                        <button mat-icon-button (click)="abrirEmergente(prod)" color="primary">  <!--(click)="abrirEmergente(updMem)"-->
-                          <mat-icon class="icon-size">edit</mat-icon>
-                        </button>
-                      </ng-container>
-                      <ng-container *ngIf="column === 'Info Cliente'">
-                        <button mat-icon-button (click)="abrirInfoCliente(prod)" color="{{ prod.foto ? 'primary' : 'warn' }}">  <!--(click)="abrirEmergente(updMem)"-->
-                          <mat-icon class="icon-size">info</mat-icon>
-                        </button>
-                      </ng-container>
-                      <ng-container *ngIf="column === 'Huella'">
-                        <div *ngIf="prod.huella !== null && prod.huella !== 'null' && prod.huella !== '0'; else noHuella">
-                          <!-- Contenido para cuando huella no es nula ni 'null' y tampoco es cero 
-                          <img src="https://olympus.arvispace.com/gimnasioRoles/assets/img/huella.png" style="width: 20%;"/>-->
-                          <label class="estatus-activo"><mat-icon>fingerprint</mat-icon>          
-                            Registrada
-                          </label>
-                        </div>
-                        <ng-template #noHuella>
-                          <!-- Contenido para cuando huella es nula, 'null' o cero -->
-                          <div style="width: 100%;">
-                            <label class="estatus-inactivo">Huella no registrada</label>
-                          </div>
-                        </ng-template>
-                      </ng-container>
-                  </td>
-                </ng-container>
-                <tr mat-header-row *matHeaderRowDef="displayedColumnsActivos"></tr>
-                <tr mat-row *matRowDef="let productofila; columns: displayedColumnsActivos"></tr>
-              </table>
-            </div>
-              <mat-paginator #paginatorActivos [pageSizeOptions]="[5, 10, 25, 50, 100]" showFirstLastButtons></mat-paginator>
-        
+              <ng-container *ngIf="column === 'Membresia'">
+              {{ prod.Membresia }}
+              </ng-container>
+                        
+              <ng-container *ngIf="column === 'Precio'">
+              {{ prod.Precio }}
+              </ng-container>
+
+              <ng-container *ngIf="column === 'Fecha Inicio'">
+              {{ prod.Fecha_Inicio }}
+              </ng-container>
+
+              <ng-container *ngIf="column === 'Fecha Fin'">
+              {{ prod.Fecha_Fin }}
+              </ng-container>
+                      
+              <ng-container *ngIf="column === 'Estatus'">
+                <div [ngClass]="{'estatus-activo': prod.Status_Num === '1', 'estatus-inactivo': prod.Status_Num !== '1'}">
+                {{ prod.Status }}
+                </div>
+              </ng-container>
+
+              <ng-container *ngIf="column === 'Pago'">
+                <button mat-icon-button (click)="abrirEmergente(prod)" color="primary">  <!--(click)="abrirEmergente(updMem)"-->
+                  <mat-icon class="icon-size">edit</mat-icon>
+                </button>
+              </ng-container>
+
+              <ng-container *ngIf="column === 'Info Cliente'">
+                <button mat-icon-button (click)="abrirInfoCliente(prod)" color="{{ prod.foto ? 'primary' : 'warn' }}">  <!--(click)="abrirEmergente(updMem)"-->
+                  <mat-icon class="icon-size">info</mat-icon>
+                </button>
+              </ng-container>
+  
+              <ng-container *ngIf="column === 'Huella'">
+                <div *ngIf="prod.huella !== null && prod.huella !== 'null' && prod.huella !== '0'; else noHuella">
+                  <!-- Contenido para cuando huella no es nula ni 'null' y tampoco es cero 
+                  <img src="https://olympus.arvispace.com/gimnasioRoles/assets/img/huella.png" style="width: 20%;"/>-->
+                  <label class="estatus-activo"><mat-icon>fingerprint</mat-icon>          
+                    Registrada
+                  </label>
+                </div>
+                <ng-template #noHuella>
+                  <!-- Contenido para cuando huella es nula, 'null' o cero -->
+                  <div style="width: 100%;">
+                    <label class="estatus-inactivo">Huella no registrada</label>
+                  </div>
+                </ng-template>
+              </ng-container>                
+           </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsActivos"></tr>
+          <tr mat-row *matRowDef="let productofila; columns: displayedColumnsActivos"></tr>
+        </table>
+      </div>
+      <mat-paginator #paginatorActivos [pageSizeOptions]="[5, 10, 25, 50, 100]" showFirstLastButtons></mat-paginator>
+    </div> 
+  </div>
+</div>
