--- a/src/app/modules/plan-lista/plan.component.css
+++ b/src/app/modules/plan-lista/plan.component.css
@@ -12,11 +12,6 @@ table {
   max-width: 100%;  /* Evita que la tabla sea más ancha que el contenedor */
 }
 
-
-
-
-
-
 /* CSS para el toggle button */
 .toggle-container {
   float: left;
@@ -65,3 +60,37 @@ table {
   background-color: #fff;
 }
 
+
+/*CARGANDO*/
+.custom-spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.custom-spinner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.spinner-circle {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: 4px solid #fd9727;
+  border-top: 4px solid transparent;
+  animation: spin 1s linear infinite;
+}
+
+.spinner-text {
+  margin-top: 10px;
+  font-weight: bold;
+  color: #000000; 
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
