--- a/src/app/modules/productos/productos.component.css
+++ b/src/app/modules/productos/productos.component.css
@@ -59,22 +59,52 @@ table {
     left: 0; /* Mantiene la "bolita" a la izquierda cuando está activo */
   }
   
-
-
-
   .custom-cell span {
     padding: 10px 40px; /* Espacio entre el texto y el borde */
     color: rgb(255, 255, 255); /* Color del texto */
     border-radius: 5px;
   }
   
-  
-  
-
   .centered-table {
     margin: auto; /* Centrar horizontalmente */
-}
+  }
 
 .mat-table {
     table-layout: auto; /* Ajustar el ancho de las columnas automáticamente */
 }
+
+
+/*CARGANDO*/
+.custom-spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.custom-spinner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.spinner-circle {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: 4px solid #fd9727;
+  border-top: 4px solid transparent;
+  animation: spin 1s linear infinite;
+}
+
+.spinner-text {
+  margin-top: 10px;
+  font-weight: bold;
+  color: #000000; 
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
