--- a/src/app/modules/reports/reports.component.html
+++ b/src/app/modules/reports/reports.component.html
@@ -1,78 +1,76 @@
-<div style="margin-top: 60px;">
-  <div class="container mt-4">
-      <div class="row">
-          <h2 class="title_page">REPORTES DE SUCURSALES</h2>
-          <div class="alert alert-light" role="alert">
-              <form [formGroup]="form">
-                  <mat-form-field appearance="outline" class="input_css">
-                      <mat-label>Periodo</mat-label>
-                      <mat-date-range-input [rangePicker]="picker">
-                          <input matStartDate placeholder="Fecha inicial" formControlName="p_inicial">
-                          <input matEndDate placeholder="Fecha final" formControlName="p_final">
-                      </mat-date-range-input>
-                      <mat-hint>YYYY/MM/DD – YYYY/MM/DD</mat-hint>
-                      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                      <mat-date-range-picker #picker></mat-date-range-picker>
-                  </mat-form-field>
-                  <mat-form-field appearance="outline" class="input_css">
-                      <mat-label>Tipo de reporte</mat-label>
-                      <mat-select id="sucursal" formControlName="tipo" [(ngModel)]="opcionSeleccionada">
-                          <mat-option value="1" (click)="obtenerDatosParaGrafico1()">Membresias vendidas (total)</mat-option>
-                          <mat-option value="2" (click)="obtenerDatosParaGrafico2()">Membresias vendidas (visita, quincena, mensuaidad, anualidad)</mat-option>
-                          <mat-option value="5" (click)="obtenerDatosParaGrafico5()">Productos más vendidos (productos)</mat-option>
-                      </mat-select>
-                  </mat-form-field>
-              </form>
-              <div class="row" *ngIf="opcionSeleccionada === '1'">
-                  <div class="col-md-6" *ngFor="let chartData of barChartDataArray">
-                      <br>
-                      <br>
-                      <br>
-                      <h1>{{ chartData.label }}</h1>
-                      <div style="width: 90%;height: 70%;">
-                          <canvas baseChart [datasets]="[chartData]" [labels]="['Ventas']" [options]="barChartOptions" [legend]="barChartLegend" [type]="barChartType">
-                          </canvas>
-                      </div>
-                  </div>
-              </div>
-              <div class="row" *ngIf="opcionSeleccionada === '2'">
-                  <div class="col-md-6" *ngFor="let chartData of barChartDataArray">
-                      <br>
-                      <br>
-                      <br>
-                      <h1>{{ chartData.label }}</h1>
-                      <div style="width: 90%;height: 70%;">
-                          <canvas baseChart [datasets]="[chartData]" [labels]="['Visita', 'Quincena','Mensuaidad', 'Anualidad']" [options]="barChartOptions" [legend]="barChartLegend" [type]="barChartType">
-                          </canvas>
-                      </div>
-                  </div>
-              </div>
+<div class="custom-spinner-container" *ngIf="isLoading">
+    <div class="custom-spinner">
+        <div class="spinner-circle"></div>
+        <div class="spinner-text">Cargando...</div>
+    </div>
+</div>
+<div>
+    <div style="margin-top: 60px;">
+    <div class="container mt-4">
+        <div class="row">
+            <h2 class="title_page">REPORTES DE SUCURSALES</h2>
+            <div class="alert alert-light" role="alert">
+                <form [formGroup]="form">
+                    <mat-form-field appearance="outline" class="input_css">
+                        <mat-label>Periodo</mat-label>
+                        <mat-date-range-input [rangePicker]="picker">
+                            <input matStartDate placeholder="Fecha inicial" formControlName="p_inicial">
+                            <input matEndDate placeholder="Fecha final" formControlName="p_final">
+                        </mat-date-range-input>
+                        <mat-hint>YYYY/MM/DD – YYYY/MM/DD</mat-hint>
+                        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-date-range-picker #picker></mat-date-range-picker>
+                    </mat-form-field>
+                    <mat-form-field appearance="outline" class="input_css">
+                        <mat-label>Tipo de reporte</mat-label>
+                        <mat-select id="sucursal" formControlName="tipo" [(ngModel)]="opcionSeleccionada">
+                            <mat-option value="1" (click)="obtenerDatosParaGrafico1()">Membresias vendidas (total)</mat-option>
+                            <mat-option value="2" (click)="obtenerDatosParaGrafico2()">Membresias vendidas (visita, quincena, mensuaidad, anualidad)</mat-option>
+                            <mat-option value="5" (click)="obtenerDatosParaGrafico5()">Productos más vendidos (productos)</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </form>
+                <div class="row" *ngIf="opcionSeleccionada === '1'">
+                    <div class="col-md-6" *ngFor="let chartData of barChartDataArray">
+                        <br>
+                        <br>
+                        <br>
+                        <h1>{{ chartData.label }}</h1>
+                        <div style="width: 90%;height: 70%;">
+                            <canvas baseChart [datasets]="[chartData]" [labels]="['Ventas']" [options]="barChartOptions" [legend]="barChartLegend" [type]="barChartType">
+                            </canvas>
+                        </div>
+                    </div>
+                </div>
+                <div class="row" *ngIf="opcionSeleccionada === '2'">
+                    <div class="col-md-6" *ngFor="let chartData of barChartDataArray">
+                        <br>
+                        <br>
+                        <br>
+                        <h1>{{ chartData.label }}</h1>
+                        <div style="width: 90%;height: 70%;">
+                            <canvas baseChart [datasets]="[chartData]" [labels]="['Visita', 'Quincena','Mensuaidad', 'Anualidad']" [options]="barChartOptions" [legend]="barChartLegend" [type]="barChartType">
+                            </canvas>
+                        </div>
+                    </div>
+                </div>
 
-              <div class="row" *ngIf="opcionSeleccionada === '5'">
-                  <div class="col-md-6" *ngFor="let gimnasioData of datosGraficosPorGimnasio | keyvalue">
-                      <br>
-                      <br>
-                      <br>
-                      <div>
-                          <h1>{{ gimnasioData.key }}</h1>
-                          <div style="width: 90%; height: 70%;">
-                              <canvas baseChart [datasets]="gimnasioData.value.chartData" [labels]="gimnasioData.value.chartLabels" [options]="barChartOptions" [legend]="barChartLegend" [type]="barChartType">
-                              </canvas>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          <!--<div class="row" *ngIf="opcionSeleccionada === '1'">
-          <div class="col-md-6" *ngFor="let chartData of barChartDataArray">
-            <br><br><br>
-            <h1>{{ chartData.label }}</h1>
-            <div style="width: 90%; height: 70%;">
-              <canvas baseChart [datasets]="[{ data: chartData.data }]" [labels]="['Ventas']" [options]="doughnutChartOptions" [legend]="doughnutChartLegend" [type]="doughnutChartType"></canvas>
+                <div class="row" *ngIf="opcionSeleccionada === '5'">
+                    <div class="col-md-6" *ngFor="let gimnasioData of datosGraficosPorGimnasio | keyvalue">
+                        <br>
+                        <br>
+                        <br>
+                        <div>
+                            <h1>{{ gimnasioData.key }}</h1>
+                            <div style="width: 90%; height: 70%;">
+                                <canvas baseChart [datasets]="gimnasioData.value.chartData" [labels]="gimnasioData.value.chartLabels" [options]="barChartOptions" [legend]="barChartLegend" [type]="barChartType">
+                                </canvas>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-          </div>-->
-
-          </div>
-      </div>
-  </div>
+        </div>
+    </div>
+    </div>
 </div>
